<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:clickable="true"
        android:contentDescription="@string/desc"
        android:focusable="true"
        app:backgroundTint="@android:color/background_dark"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_Gestures_main"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pressureBar_main"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_tap_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_mid_tap_grey_v1"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.05" />

        <ImageView
            android:id="@+id/imageView_index_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_index_grey_v1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.05" />

        <ImageView
            android:id="@+id/imageView_thumb_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_thumb_grey_v1"/>

    </LinearLayout>

    <android.opengl.GLSurfaceView
        android:id="@+id/cubeLayout_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/pressureBar_main"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout_Gestures_main"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_Gestures_main"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_Gestures_main" />

    <ProgressBar
        android:id="@+id/pressureBar_main"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="40dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/progress_bar_border"

        android:max="1000"
        android:progressDrawable="@drawable/progress_bar_theme"
        android:translationZ="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout_Gestures_main" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cubeLayout_main">

        <TextView
            android:id="@+id/textView_addressTitle_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_main"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressureBar_main" />

        <TextView
            android:id="@+id/textView_status_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/status_main"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView_battery_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/battery_main"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_main_calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/next_callback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>